<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="calculator" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="51" translatesAutoresizingMaskIntoConstraints="NO" id="SXn-ZP-vwE">
                                <rect key="frame" x="181" y="397" width="32" height="102"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="tintColor" systemColor="secondarySystemBackgroundColor"/>
                            </stackView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1. Num" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SUz-Ci-qyE" customClass="UITextFiled">
                                <rect key="frame" x="52" y="431" width="310" height="34"/>
                                <color key="tintColor" systemColor="secondarySystemBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="firstNumTxt"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="2. Num" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oce-Cd-9OV" customClass="UITextFiled">
                                <rect key="frame" x="53" y="467" width="310" height="34"/>
                                <color key="tintColor" systemColor="secondarySystemBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="secondNumTxt"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="j65-Kc-6x0">
                                <rect key="frame" x="70" y="593" width="254.5" height="48"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aRg-yA-sB9">
                                        <rect key="frame" x="0.0" y="0.0" width="136" height="48"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                        <color key="textColor" systemColor="systemBackgroundColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SbX-CE-gib">
                                        <rect key="frame" x="153" y="0.0" width="101.5" height="48"/>
                                        <accessibility key="accessibilityConfiguration" identifier="result"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                        <color key="textColor" systemColor="systemBackgroundColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="4Fc-c6-8HA">
                                <rect key="frame" x="90" y="554" width="234" height="31"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mEs-Jp-H58">
                                        <rect key="frame" x="0.0" y="0.0" width="33" height="31"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="+"/>
                                        <connections>
                                            <action selector="addBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9iD-RB-Dvv"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ak1-TY-Jra">
                                        <rect key="frame" x="67" y="0.0" width="33" height="31"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="-"/>
                                        <connections>
                                            <action selector="minusBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q61-RW-pgx"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="imT-gk-pMQ">
                                        <rect key="frame" x="134" y="0.0" width="33" height="31"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="*"/>
                                        <connections>
                                            <action selector="multiplierBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BLf-eZ-50b"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aGu-nD-AJD">
                                        <rect key="frame" x="201" y="0.0" width="33" height="31"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="/"/>
                                        <connections>
                                            <action selector="divisorBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fUr-mj-QfF"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="labelColor"/>
                        <constraints>
                            <constraint firstItem="j65-Kc-6x0" firstAttribute="top" secondItem="4Fc-c6-8HA" secondAttribute="bottom" constant="8" symbolic="YES" id="6ZU-te-JXn"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="j65-Kc-6x0" secondAttribute="trailing" constant="89.5" id="8sr-y2-Qnf"/>
                            <constraint firstItem="4Fc-c6-8HA" firstAttribute="top" secondItem="Oce-Cd-9OV" secondAttribute="bottom" constant="53" id="Mvg-Mr-gLx"/>
                            <constraint firstItem="SUz-Ci-qyE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="387" id="Nrr-DY-fab"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4Fc-c6-8HA" secondAttribute="trailing" constant="90" id="S1W-Ah-vmY"/>
                            <constraint firstItem="4Fc-c6-8HA" firstAttribute="top" secondItem="Oce-Cd-9OV" secondAttribute="bottom" constant="53" id="XPd-0W-o15"/>
                            <constraint firstItem="SUz-Ci-qyE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="52" id="cdS-nq-2Us"/>
                            <constraint firstItem="Oce-Cd-9OV" firstAttribute="top" secondItem="SUz-Ci-qyE" secondAttribute="bottom" constant="2" id="dLl-gD-eN1"/>
                            <constraint firstItem="Oce-Cd-9OV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="53" id="fRJ-VC-TLk"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Oce-Cd-9OV" secondAttribute="trailing" constant="51" id="h5J-Jr-K3x"/>
                            <constraint firstItem="j65-Kc-6x0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="iv0-5D-L10"/>
                            <constraint firstItem="Oce-Cd-9OV" firstAttribute="top" secondItem="SUz-Ci-qyE" secondAttribute="bottom" constant="2" id="qFZ-9W-qRx"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SUz-Ci-qyE" secondAttribute="trailing" constant="52" id="rnv-5j-3hh"/>
                            <constraint firstItem="j65-Kc-6x0" firstAttribute="top" secondItem="4Fc-c6-8HA" secondAttribute="bottom" constant="8" symbolic="YES" id="vOY-QC-2th"/>
                            <constraint firstItem="4Fc-c6-8HA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="90" id="xvO-gP-Mwy"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="j65-Kc-6x0" secondAttribute="bottom" constant="221" id="zg0-Ae-1Qu"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="firstNumTxt" destination="SUz-Ci-qyE" id="XIi-JZ-WkR"/>
                        <outlet property="result" destination="SbX-CE-gib" id="U4g-7p-HM7"/>
                        <outlet property="secondNumTxt" destination="Oce-Cd-9OV" id="poD-sO-aSe"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="95.652173913043484" y="52.901785714285715"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="labelColor">
            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="secondarySystemBackgroundColor">
            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
